add email filtering page

--- a/html/email-filtering.html
+++ b/html/email-filtering.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.tailwindcss.com" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <title>Comprehensive Learning Path for Machine Learning and Deep Learning</title>
+    <title>Email Data Extraction Machine Learning</title>
     <style>
         table {
             width: 100%;
@@ -40,7 +40,7 @@
                 <li><a href="lecture8.html" class="text-blue-400">8</a></li>
             </ul>
         </nav>
-        <h1>2: Learning Path for Machine Learning and Deep Learning</h1>
+        <h1>Email Data Extraction Machine Learning</h1>
     </header>
 
     <main class="p-4">
