--- a/html/lecture3.html
+++ b/html/lecture3.html
@@ -54,6 +54,8 @@
                     </ul>
                     <p><a href="https://www.youtube.com/watch?v=SmZmBKc7Lrs" class="text-blue-400">Video - The Most Important Algorithm in Machine Learning</a></p>
                     <p><a href="curve-fitting.html" class=" text-blue-400">Curve Fitting</a></p>
+                    <img src="./NER.png" alt="NER" class="section-image">
+                    <p><a href="email-filtering.html" class=" text-blue-400">Named Entity Recognition for Email Data Extraction</a></p>
                 </li>
                 <p></p>
                 <li><strong>1990s</strong> - Support Vector Machines and Advances in Theory:
