add link to alexnet 2012 youtube video

--- a/html/lecture3.html
+++ b/html/lecture3.html
@@ -78,6 +78,7 @@
                 <li><strong>2010s</strong> - Deep Learning Breakthroughs:
                     <ul>
                         <li>2012: <a href="https://en.wikipedia.org/wiki/AlexNet" class="text-blue-400">AlexNet</a> wins the ImageNet challenge, significantly outperforming the second-place competitor, catalyzing the focus on deep learning in the AI community.</li>
+                        <li><a href="https://www.youtube.com/watch?v=UZDiGooFs54" class="text-blue-400">The moment we stopped understanding AI [AlexNet]</li>
                         <li>2016: Google's <a href="https://en.wikipedia.org/wiki/AlphaGo" class="text-blue-400">AlphaGo</a> defeats <a href="https://en.wikipedia.org/wiki/Lee_Sedol" class="text-blue-400">Lee Sedol</a> in Go, a milestone for AI in complex problem-solving.</li>
                     </ul>
                     
