add fine tuning page

--- a/html/index.html
+++ b/html/index.html
@@ -68,7 +68,7 @@
                 <a href="./lecture7.html" class="text-blue-500 hover:text-blue-700">View Details</a>
             </div>
             <div class="bg-white shadow-md rounded-lg p-4">
-                <h3 class="text-md font-semibold">Week 8: Machine Learning and Blockchain Data
+                <h3 class="text-md font-semibold">Week 8: Techniques for Improving LLM Accuracy and Performance
                 </h3>
                 <a href="./lecture8.html" class="text-blue-500 hover:text-blue-700">View Details</a>
             </div>
